<resources>
    <string name="app_name">TestAppAlifTech</string>
    <string name="users">Users</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="company">Company</string>
    <string name="posts">Posts</string>
    <string name="website">Website</string>
    <string name="no_location">Location not found</string>
    <string name="no_phone_number">Phone number not found</string>
    <string name="detail">Detail</string>
    <string name="albums">Albums</string>
    <string name="photos">Photos</string>
    <string name="todos">Todos</string>
    <string name="delete_item">Do you want to delete this post?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="image_download">Image download</string>
    <string name="downloading">Downloading....</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not Completed</string>
</resources>