<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background_color">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/screen_background_color"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/padding_small"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleToolBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/detail"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/text_size_big" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".presentation.ui.screen.settings.ChatScreen">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutDetail"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:layout_marginVertical="@dimen/margin_standard"
            android:background="@drawable/bg_tab_layout"
            android:padding="2dp"
            app:tabIndicator="@drawable/bg_tab_layout_indicator_corner"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorGravity="center"
            app:tabIndicatorHeight="32dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/text_color_2"
            app:tabTextAppearance="@style/tab_text"
            app:tabTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albums" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todos" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_posts" />
    </LinearLayout>


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>